// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Academy challenges snapshots Challenge 1 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
    </div>
  </div>
  <div>
    Mean: 
    <strong>
      0.00
    </strong>
    <br />
    <br />
    Mode: 
    <strong>
      0
    </strong>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 2 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    <div>
      Output:
    </div>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 3 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output:
    <br />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 4 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 5 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input
      type="number"
    />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 6 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 7 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 8 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong>
      undefined
    </strong>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 9 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 10 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
    </div>
    <div>
      K: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 11 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
    </div>
    <div>
      X: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 12 1`] = `
<div
  className=""
>
  <div>
    Input: 
    <input />
    <button
      onClick={[Function]}
    >
      Reverse
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 13 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
      <button
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
  <div>
    <div>
      Output
    </div>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 14 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
    </div>
    <div>
      K: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 15 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    <div>
      Output:
    </div>
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 16 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output: 
    <strong />
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 17 1`] = `
<div
  className=""
>
  <div>
    <div>
      Coins: 
      <input
        onKeyDown={[Function]}
        type="number"
      />
    </div>
    <div>
      Money: 
      <input
        type="number"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    Output:
  </div>
</div>
`;

exports[`Code Academy challenges snapshots Challenge 18 1`] = `
<div
  className=""
>
  <div>
    <div>
      Input: 
      <input />
    </div>
    <div>
      Elements: 
      <input />
    </div>
    <button
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
  <div>
    <div>
      Output:
    </div>
    <div />
  </div>
</div>
`;
